k3s_old/15-traefik-whoami.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: utils

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-deployment
  namespace: utils
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami-container
          image: containous/whoami
          resources:
            requests:
              memory: "32Mi"
              cpu: "75m"
            limits:
              memory: "64Mi"
              cpu: "150m"

---

apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: utils
spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingressroute
  namespace: utils
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Path(`/utils/whoami`)
      kind: Rule
      services:
        - name: whoami-service
          port: 80
      middlewares:
        - name: secure-redirect
          namespace: default
