k3s_old/30-dashboard.yaml

apiVersion: v1
kind: Service
metadata:
  name: sso-proxy
  namespace: kube-system
spec:
  type: ExternalName
  externalName: 192.168.1.174
  ports:
    - name: https
      port: 4443
      targetPort: 4443


---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: httpdashboard-proxy-ingressroute
  namespace: kube-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`httpdashboard.sb.ieee.elux.ing.unibs.it`)
      priority: 15
      middlewares:
        - name: secure-redirect
          namespace: default
        - name: authentik
          namespace: default
      services:
        - name: httpdashboard-proxy
          port: 9000
    - kind: Rule
      match: "Host(`httpdashboard.sb.ieee.elux.ing.unibs.it`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 10
      services:
          - name: sso-proxy
            namespace: external-sso
            port: https
            scheme: https
  tls:
    secretName: httpdashboard-sb-ieee-elux-ing-unibs-it--tls
